--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .start{
     height: 100vh;
     width: 100%;
-    background-image: url(../img/HomeBackground.png);
+    background-image: url(/img/HomeBackground.png);
     background-color: cover;
     background-position: center;
 }
@@ -28,7 +28,7 @@ nav{
 nav ul li{
     list-style-type: none;
     display: inline-block;
-    pad: 10px 25px;
+    padding: 10px 25px;
 }
 nav ul li a{
     color:black;
@@ -56,7 +56,7 @@ nav ul li a:hover{
     position: absolute;
     top: 50%;
     left:8%;
-    transform: translate(-50%);
+    transform: translateY(-50%);
 }
 h1{
     color:black;
