--- a/style.css
+++ b/style.css
@@ -37,17 +37,18 @@ nav ul li a{
     text-transform: capitalize;
 }
 nav ul li a:hover{
-    color:grey;
+    color:greenyellow;
     transition: 0.25s;
 }
 .btn{
-    background-color: white;
+    background-color: grey;
+    color: black;
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: bold;
     padding: 10px 25px;
     border-radius: 30px;
-    transition: transform 0.25;
+    transition: transform 0.25s;
 }
 .btn:hover{
     transform: scale((1.15));
@@ -55,7 +56,7 @@ nav ul li a:hover{
 .content{
     position: absolute;
     top: 50%;
-    left:8%;
+    left: 8%;
     transform: translateY(-50%);
 }
 h1{
