--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .start{
     height: 100vh;
     width: 100%;
-    background-image: url(/img/HomeBackground.png);
+    background-image: url(img/HomeBackground.png);
     background-size: cover;
     background-position: center;
 }
@@ -36,7 +36,7 @@ nav ul li a{
     font-weight: bold;
     text-transform: capitalize;
 }
-nav a:hover{
+nav ul li a:hover{
     color:greenyellow;
     transition: 0.25s;
 }
@@ -51,7 +51,8 @@ nav a:hover{
     transition: transform 0.25s;
 }
 .btn:hover{
-    transform: scale(1.15);
+    background-color: greenyellow;
+    transform: scale(1.2);
 }
 .content{
     position: absolute;
