--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ h4{
     padding: 100px 0px;
     background-color: #f5c49c;
 }
+.about img{
+    height: auto;
+    width: 430px;
+}
 .about-text{
     width: 550px;
 }
