--- a/style.css
+++ b/style.css
@@ -133,11 +133,38 @@ h4{
 .card{
     height: 365px;
     width: 335px;
-    padding: 20px 35px;
+    padding: 15px 25px;
     position: relative;
-    
 }
 .card img{
     height: 100px;
     width: 100px;
+}
+h5{
+    color: black;
+    font-size: 23;
+    margin-bottom: 15px;
+    text-align: center;
+}
+.software{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 400px;
+}
+.card{
+    height: 365px;
+    width: 335px;
+    padding: 15px 25px;
+    position: relative;
+}
+.card img{
+    height: 100px;
+    width: 100px;
+}
+h5{
+    color: black;
+    font-size: 23;
+    margin-bottom: 15px;
+    text-align: center;
 }
