--- a/style.css
+++ b/style.css
@@ -128,18 +128,18 @@ h4{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 400px;
+    min-height: 200px;
 }
 .card{
-    height: 365px;
-    width: 335px;
+    height: 150px;
+    width: 225px;
     padding: 15px 25px;
+    margin: 15px;
     position: relative;
+    overflow: hidden;
+    text-align: center;
 }
-.card img{
-    height: 100px;
-    width: 100px;
-}
+
 h5{
     color: black;
     font-size: 23;
@@ -150,21 +150,36 @@ h5{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 400px;
+    min-height: 200px;
 }
 .card{
-    height: 365px;
-    width: 335px;
+    height: 150px;
+    width: 225px;
     padding: 15px 25px;
+    margin: 15px;
     position: relative;
 }
 .card img{
     height: 100px;
     width: 100px;
 }
+.card img:hover{
+    transform: scale(1.1);
+    transition: 0.15s;
+}
 h5{
     color: black;
     font-size: 23;
     margin-bottom: 15px;
     text-align: center;
+}
+
+.contact{
+    width: 100%;
+    height: 290px;
+    background: #f5c49c;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
