--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav{
     padding-right: 8%;
 }
 .logo{
-    color: black;
+    color: #eee7e1;
     font-size: 36px;
     letter-spacing: 1px;
     cursor: pointer;
@@ -31,17 +31,17 @@ nav ul li{
     padding: 10px 25px;
 }
 nav ul li a{
-    color:black;
+    color:#eee7e1;
     text-decoration: none;
     font-weight: bold;
     text-transform: capitalize;
 }
 nav ul li a:hover{
-    color:greenyellow;
+    color:#ffca6f;
     transition: 0.25s;
 }
 .btn{
-    background-color: grey;
+    background-color: #ffca6f;
     color: black;
     text-decoration: none;
     border: 2px solid transparent;
@@ -52,7 +52,7 @@ nav ul li a:hover{
 }
 .btn:hover{
     background-color: greenyellow;
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 .content{
     position: absolute;
@@ -130,7 +130,7 @@ h4{
     align-items: center;
     min-height: 200px;
 }
-.card{
+.skill{
     height: 150px;
     width: 225px;
     padding: 15px 25px;
@@ -152,18 +152,18 @@ h5{
     align-items: center;
     min-height: 200px;
 }
-.card{
+.skill{
     height: 150px;
     width: 225px;
     padding: 15px 25px;
     margin: 15px;
     position: relative;
 }
-.card img{
+.skill img{
     height: 100px;
     width: 100px;
 }
-.card img:hover{
+.skill img:hover{
     transform: scale(1.1);
     transition: 0.15s;
 }
@@ -182,4 +182,33 @@ h5{
     align-items: center;
     flex-direction: column;
     justify-content: center;
+}
+
+footer{
+    position: relative;
+    width: 100%;
+    height: 150px;
+    background: #ffe7ca;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.end{
+    position: absolute;
+    bottom: 35px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+.copyright{
+    width: 10px;
+    height: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    margin: 22px 10px;
+    color:black;
+    text-decoration: none;
+    font-size: 20px;
 }
