--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', 'sans serif';
+    font-family: 'Roboto Slab', serif;
     box-sizing: border-box
 }
 html{
