--- a/style_StarMapNavigation.css
+++ b/style_StarMapNavigation.css
@@ -9,7 +9,7 @@ html{
 }
 
 body{
-    background: #1d3557;
+    background: #212529;
 } 
 
 
@@ -31,7 +31,7 @@ nav{
     padding-right: 15%;
 }
 .logo{
-    color: #f1faee;
+    color: #eab72d;
     font-size: 44px;
     letter-spacing: 1px;
 }
@@ -52,7 +52,7 @@ nav ul li a::after{
     content:'';
     width: 0;
     height:  3px;
-    background-color: #e63946;
+    background-color: #eab72d;
     position: absolute;
     left: 0;
     bottom: -5px;
@@ -62,7 +62,7 @@ nav ul li a:hover::after{
     width: 100%;
 }
 nav ul li a:hover{
-    color:#e63946;
+    color:#eab72d;
     transition: 0.25s;
 }
 
@@ -83,14 +83,14 @@ nav ul li a:hover{
 
 .Text h1{
     font-size: 56px;
-    color: #f1faee;
+    color: #eab72d;
 }
 
 .Text .line{
     width: 70%;
-    height: 3px;
+    height: 0px;
     margin: auto 15%;
-    background: #f1faee;
+    background: #eab72d;
 }
 
 .Text p{
@@ -108,6 +108,7 @@ nav ul li a:hover{
     margin: 30% 5%;
     width: 640px;
     height: 360px;
+    cursor: pointer;
 }
 
 
@@ -116,7 +117,7 @@ nav ul li a:hover{
 
 .FirstSection{
     display: flex;
-    background-color: #457b9d;
+    background-color: #343a40;
 }
 
 .FirstSection .Text{
@@ -181,7 +182,7 @@ nav ul li a:hover{
 
 .ThirdSection{
     display: flex;
-    background-color: #457b9d;
+    background-color: #343a40;
 }
 
 .ThirdSection .Text{
