--- a/style_Boids.css
+++ b/style_Boids.css
@@ -104,7 +104,7 @@ nav ul li a:hover{
     display: flex;
 }
 
-.Video img{
+.Video video{
     margin: 30% 5%;
     width: 640px;
     height: 360px;
