--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ nav{
     align-items: center;
     justify-content: space-between;
     padding-top: 2%;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 12%;
+    padding-right: 12%;
 }
 .logo{
     color: #eab72d;
@@ -447,14 +447,18 @@ footer{
     /* ----- Projects Section ----- */
 
     .first-row{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-gap: 40px;
         margin-top: 50px;
-        display: flex;
-        justify-content: center;
+        display: grid;
         align-items: center;
-        padding-bottom: 150px;
+    }
+    .project{
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        border-radius: 15px;
+        width: 288px;
+        height: 360px;
+        overflow: hidden;
     }
 
     /* ----- About Section ----- */
